--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "12.2.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
+    "react-sortablejs": "^6.1.4",
+    "sortablejs": "^1.15.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
     "@types/react": "^18.0.15",
+    "@types/sortablejs": "^1.13.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
