--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "12.2.2",
     "react": "18.2.0",
+    "react-contenteditable": "^3.3.7",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
     "react-sortablejs": "^6.1.4",
     "sortablejs": "^1.15.0",
-    "update-browserslist-db": "^1.0.10"
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.0.6",
