--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
     "react-sortablejs": "^6.1.4",
+    "react-tooltip": "^5.10.4",
+    "react-use": "^17.4.0",
     "sortablejs": "^1.15.0",
     "uuid": "^9.0.0"
   },
@@ -36,7 +38,7 @@
     "postcss": "^8.4.14",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
-    "tailwindcss": "^3.1.6",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.7.4"
   }
 }
