--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3",
     "react-sortablejs": "^6.1.4",
-    "react-tooltip": "^5.10.4",
+    "react-tooltip": "5.8.3",
     "react-use": "^17.4.0",
     "sortablejs": "^1.15.0",
     "uuid": "^9.0.0"
