--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "entities": "^4.4.0",
     "htmlparser2": "^8.0.2",
-    "next": "12.2.2",
-    "react": "18.2.0",
+    "next": "^13.2.4",
+    "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-sortablejs": "^6.1.4",
     "react-tooltip": "5.8.3",
@@ -34,7 +34,7 @@
     "@types/sortablejs": "^1.13.0",
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
-    "eslint-config-next": "12.2.2",
+    "eslint-config-next": "^13.2.4",
     "postcss": "^8.4.14",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.4",
