--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@uiw/codemirror-extensions-langs": "^4.19.11",
+    "@uiw/react-codemirror": "^4.19.11",
     "entities": "^4.4.0",
     "htmlparser2": "^8.0.2",
     "next": "^13.2.4",
