--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@uiw/codemirror-extensions-langs": "^4.19.11",
+    "@uiw/codemirror-themes-all": "^4.19.11",
     "@uiw/react-codemirror": "^4.19.11",
     "entities": "^4.4.0",
     "htmlparser2": "^8.0.2",
