--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -25,7 +25,7 @@
     "**/*.tsx",
     "**/*.css",
     "**.*.js"
-, "components/Item.jsx", "components/SortableItem.jsx"  ],
+, "components/Item.jsx", "components/SortableItem.jsx", "middleware.ts"  ],
   "exclude": [
     "node_modules"
   ]
