--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.3",
     "react-sortablejs": "^6.1.4",
+    "react-toastify": "^9.1.2",
     "react-tooltip": "5.8.3",
     "react-use": "^17.4.0",
     "sortablejs": "^1.15.0",
