--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,7 @@
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-NEXT_PUBLIC_BACKEND_API_URL=
+NEXT_PUBLIC_API_URL=
 NEXTAUTH_SECRET=
 NEXT_PUBLIC_BASE_URL=
 NEXTAUTH_URL=
