--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,7 @@
     "typescript": "^5.0.4"
   },
   "scripts": {
-    "start": "ts-node-dev --exit-child src/index.ts",
+    "dev": "ts-node-dev --exit-child src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
