--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,14 @@
     "@prisma/client": "^4.12.0",
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.11",
     "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
@@ -20,7 +22,7 @@
     "typescript": "^5.0.4"
   },
   "scripts": {
-    "dev": "ts-node-dev --exit-child src/index.ts",
+    "dev": "ts-node-dev --files --exit-child src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
