--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,8 @@
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
@@ -16,6 +17,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.11",
+    "@types/uuid": "^9.0.1",
     "prisma": "^4.12.0",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
