--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,8 @@
     "typescript": "^5.0.4"
   },
   "scripts": {
+    "build": "tsc -p .",
+    "start": "node dist/index.js",
     "dev": "ts-node-dev --files --exit-child src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
